connected form and enabled email submission, added thanks.html
connected form and enabled email submission, added thanks.html

--- a/index.html
+++ b/index.html
@@ -320,17 +320,20 @@
                     </div>
                 </div>
                 <div class="right">
-                    <form action="">
+                    <form action="https://formsubmit.co/devyansh.sehgal@gmail.com" method="POST">
                         <div class="form_group">
                             <div>
                                 <label for="Name">Name</label>
-                                <input type="text" name="" id="">
+                                <input type="text" name="name" required>
                             </div>
 
                             <div>
                                 <label for="email">Email</label>
-                                <input type="email" name="" id="">
+                                <input type="email" name="email" required>
+                                <input type="hidden" name="_subject" value="New Email">
+                                <input type="hidden" name="_next" value="https://devyansh3.github.io/sehgaldevyansh.github.io//thanks.html">
                             </div>
+                            
 
                         </div>
 
