added certificates and added text in skills and technologies used

--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
                         <span>Minor</span>
                         <span>Economics</span>
                     </p>
+                    <p>
+                        <span>Technologies/Languages known</span>
+                        <span>Django,jquery,HTML/CSS,Ruby on Rails,PHP/Laravel,Python</span>
+                    </p>
+                    <p>
+                        <span>Databases known</span>
+                        <span>MySQL,MongoDB</span>
+                    </p>
+                    <p>
+                        <span>Tools</span>
+                        <span>Eclipse,SVN,Maven</span>
+                    </p>
                 </div>
             </div>
         </section>
@@ -236,7 +248,7 @@
                 <div class="portfolio">
                     <div class="tabs">
                         <ul>
-                            <li><a class="active" href="#" data-filter="*">projects and designs</a></li>
+                            <li><a class="active" href="#" data-filter="*">Certifications</a></li>
                             <!-- <li><a href="#" data-filter=".design">UI/UX Designs</a></li>
                             <li><a href="#" data-filter=".projects">Projects</a></li> -->
                         </ul>
@@ -244,18 +256,18 @@
 
                     <div class="portfolio_wrapper">
                         <div class="item design">
-                            <a class="magnify" href="./images/images/1.jpg" title = 'something'>
-                                <img src="./images/images/1.jpg" alt="">
+                            <a class="magnify" href="./images/images/AI_Specialization-1.png" title = 'click to magnify'>
+                                <img src="./images/images/AI_Specialization-1.png" alt="">
                             </a>
                         </div>
                         <div class="item projects">
-                            <a class="magnify" href="./images/images/2.jpg" title = 'something'>
-                                <img src="./images/images/2.jpg" alt="">
+                            <a class="magnify" href="./images/images/django certificate-1.png" title = 'click to magnify'>
+                                <img src="./images/images/django certificate-1.png" alt="">
                             </a>
                         </div>
                         <div class="item design">
-                            <a class="magnify" href="./images/images/3.jpg" title = 'something'>
-                                <img src="./images/images/3.jpg" alt="">
+                            <a class="magnify" href="./images/images/py4e data structures-1.png" title = 'click to magnify'>
+                                <img src="./images/images/py4e data structures-1.png" alt="">
                             </a>
                         </div>
                         <!-- <div class="item projects">
