--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <span>Economics</span>
                     </p>
                     <p>
-                        <span>Technologies/Languages known</span>
+                        <span>Technologies known</span>
                         <span>Django,jquery,HTML/CSS,Ruby on Rails,PHP/Laravel,Python</span>
                     </p>
                     <p>
