--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                         <span>Economics</span>
                     </p>
                     <p>
-                        <span>Technologies known</span>
-                        <span>Django,jquery,HTML/CSS,Ruby on Rails,PHP/Laravel,Python</span>
+                        <span>Technologies</span>
+                        <span>Django,jquery,HTML/CSS,IBM cloud,Python</span>
                     </p>
                     <p>
                         <span>Databases known</span>
@@ -116,7 +116,7 @@
                     </p>
                     <p>
                         <span>Tools</span>
-                        <span>Eclipse,SVN,Maven</span>
+                        <span>Eclipse,Git,SVN,Maven</span>
                     </p>
                 </div>
             </div>
@@ -377,5 +377,20 @@
     <script src="./plugins/isotope.js"></script>
     <script src="./plugins/magnify.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <script>
+        window.watsonAssistantChatOptions = {
+            integrationID: "2e9339a7-47f8-45e5-88d4-ebfaae5c85b5", // The ID of this integration.
+            region: "us-south", // The region your integration is hosted in.
+            serviceInstanceID: "f98a3f28-23c9-4414-8662-604b10d10c28", // The ID of your service instance.
+            onLoad: function(instance) { instance.render(); }
+          };
+        setTimeout(function(){
+          const t=document.createElement('script');
+          t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js"
+          document.head.appendChild(t);
+        });
+      </script>
+
   </body>
 </html>
