--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                 </ul>
                 <ul class="socials">
                     <li>
-                        <a href="#">
+                        <a href="https://www.facebook.com/devyansh1">
                             <i class="uil uil-facebook"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://github.com/devyansh3">
                             <i class="uil uil-github"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://www.linkedin.com/in/devyansh-sehgal-72a626190/">
                             <i class="uil uil-linkedin"></i>
                         </a>
                     </li>
