--- a/index.html
+++ b/index.html
@@ -220,27 +220,45 @@
 
                     <div class="slider">
                         <div class="slide">
-                            <h2>Binary tree Visualizer</h2>
-                            <p>Description of the project</p>
-                            <h6>Tech stack used: Java, Javafx</h6>
+                            <h2>World Covid Tracker</h2>
+                            <p>A realtime covid tracker that displays data related to no of cured cases, total deaths etc for various countries.</p>
+                            <h6>Tech stack used: Data structures in C language</h6>
                         </div>
 
                         <div class="slide">
                             <h2>AI Checkers game</h2>
-                            <p>Description of the project</p>
+                            <p>An intelligent AI based checkers game with option to play against the computer with different levels of difficulty</p>
                             <h6>Tech stack used : HTML, CSS and javascript</h6>
                         </div>
 
                         <div class="slide">
                             <h2>Sentiment analysis webapp</h2>
-                            <p>Description of the project</p>
+                            <p>A pyhton web app that classifies travel reviews for airline companies into positive , negative and neutral</p>
                             <h6>Tech stack used : python libraries like NLTK, Matplotlib and Streamlit</h6>
                         </div>
 
                         <div class="slide">
                             <h2>Personal Chatbot</h2>
-                            <p>Description of the project</p>
+                            <p>A personal AI based chatbot ready to be deployed on a website that can answer a customer's questions </p>
                             <h6>Tech stack used : python libraries like NLTK and Streamlit</h6>
+                        </div>
+
+                        <div class="slide">
+                            <h2>Amazon Clone</h2>
+                            <p>A full stack amazon clone with functions like Add to cart , user profile , displaying products by category etc.</p>
+                            <h6>Tech stack used : MERN stack</h6>
+                        </div>
+
+                        <div class="slide">
+                            <h2>Ac'company</h2>
+                            <p>A full stack web app where users can host and register for tech competitons, Hackathons etc. Users can join Teams and search for Live competitons in real-time</p>
+                            <h6>Tech stack used : MERN stack</h6>
+                        </div>
+
+                        <div class="slide">
+                            <h2>Emotion Detector in Python</h2>
+                            <p>Finds out the dominant emotion present in the text paragraph and detects various emotions and plots results graphically.</p>
+                            <h6>Tech stack used : NLTK and Matplotlib in Python</h6>
                         </div>
                         
                     </div>
