--- a/index.html
+++ b/index.html
@@ -174,12 +174,13 @@
                     </div>
                 </div>
                 <div class="right">
+                    <h1 class="section_heading">Technologies & languages</h1>
                     <div class="skills_wrapper">
                         <div class="skill-box">
                             <h4>HTML & CSS</h4>
                             <div class="progress_wrap">
-                                <span data-percent="81" class="progress_bar">
-                                    <span class="tooltip">81%</span>
+                                <span data-percent="89" class="progress_bar">
+                                    <span class="tooltip">Expert</span>
                                 </span>
                             </div>
                         </div>
@@ -187,15 +188,23 @@
                             <h4>React.js</h4>
                             <div class="progress_wrap">
                                 <span data-percent="61" class="progress_bar">
-                                    <span class="tooltip">61%</span>
+                                    <span class="tooltip">Intermediate</span>
                                 </span>
                             </div>
                         </div>
                         <div class="skill-box">
-                            <h4>C++ & Python</h4>
+                            <h4>Python & R</h4>
                             <div class="progress_wrap">
-                                <span data-percent="77" class="progress_bar">
-                                    <span class="tooltip">77%</span>
+                                <span data-percent="85" class="progress_bar">
+                                    <span class="tooltip">Expert</span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="skill-box">
+                            <h4>C/C++</h4>
+                            <div class="progress_wrap">
+                                <span data-percent="80" class="progress_bar">
+                                    <span class="tooltip">Advanced</span>
                                 </span>
                             </div>
                         </div>
@@ -203,7 +212,15 @@
                             <h4>UI/UX Design</h4>
                             <div class="progress_wrap">
                                 <span data-percent="89" class="progress_bar">
-                                    <span class="tooltip">89%</span>
+                                    <span class="tooltip">Expert</span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="skill-box">
+                            <h4>Database Administration</h4>
+                            <div class="progress_wrap">
+                                <span data-percent="75" class="progress_bar">
+                                    <span class="tooltip">Advanced</span>
                                 </span>
                             </div>
                         </div>
