--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h2>Devyansh Sehgal</h2>
                     <p>I'm a web-developer proficient in React.js and I have a good grasp over programming languages like C++ and Python. I have a Professional Certification in Applied Artificial Intelligence from IBM comprising of 6 courses. </p>
                     <button>
-                        <a href="./pdf/Resume_updated_2022.pdf" target="_blank">Download CV</a>
+                        <a href="./pdf/FInal_resume_CDC.pdf" target="_blank">Download CV</a>
                     </button>
                     <button>
                         <a href="https://drive.google.com/drive/folders/1dQuacYQwRMz5hrwWfViJuCKLDLpFU53Y?usp=sharing" target="_blank">View Certifications</a>
