--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
               IBM comprising of 6 courses.
             </p>
             <button>
-              <a href="./pdf/FInal_resume_CDC.pdf" target="_blank"
+              <a href="./pdf/FInal_resume_CDC_devyansh_sehgal (3).pdf" target="_blank"
                 >Download CV</a
               >
             </button>
@@ -177,19 +177,19 @@
               </div>
               <div class="timeline_wrapper">
                 <div class="item">
-                  <p>December-2021</p>
+                  <p>California, Feb-2022</p>
+                  <p class="center">vGive Inc.</p>
+                  <p>FullStack Web-Dev Intern</p>
+                </div>
+                <div class="item">
+                  <p>Delhi, Dec-2021</p>
                   <p class="center">MyEra Technologies</p>
                   <p>Software Development Intern</p>
                 </div>
                 <div class="item">
-                  <p>July-2021</p>
+                  <p>Delhi, July-2021</p>
                   <p class="center">Yoloud Pvt Ltd.</p>
-                  <p>FrontEnd Developer & Graphic Design intern</p>
-                </div>
-                <div class="item">
-                  <p>July-2021</p>
-                  <p class="center">CityBubble Group</p>
-                  <p>React.js Development intern</p>
+                  <p>FrontEnd Developer</p>
                 </div>
               </div>
             </div>
@@ -299,12 +299,11 @@
               </div>
 
               <div class="slide">
-                <h2>Amazon Clone</h2>
+                <h2>Netflix App</h2>
                 <p>
-                  A full stack amazon clone with functions like Add to cart ,
-                  user profile , displaying products by category etc.
+                  A full stack Netflixclone with User authentication and stripe payment gateway. Users can select various pricing plans and view movies/trailers 
                 </p>
-                <h6>Tech stack used : MERN stack</h6>
+                <h6>Tech stack used : React Redux, Stripe, Firebase</h6>
               </div>
 
               <div class="slide">
