--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       <div class="heading">Devyansh Sehgal</div>
       <div class="button-wrapper">
           <div class="button" onclick="window.location.href='./portfolio.html'" >View Portfolio </div>
-          <div class="button" onclick="window.location.href= './pdf/FInal_resume_CDC.pdf'" target="_blank">Download Resume </div>
+          <div class="button" onclick="window.location.href= './pdf/FInal_resume_CDC_devyansh_sehgal (3).pdf'" target="_blank">Download Resume </div>
       </div>
     </div>
+  
     
     
 
