--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     
     <title>Thank you page </title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/portfolio.css" />
     <link rel="shortcut icon" href="./images/images/favicon.ico" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="./plugins/headline/headline.css">
