added styles to work exp section and minor corrections

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,9 @@
               IBM comprising of 6 courses.
             </p>
             <button>
-              <a href="./pdf/FInal_resume_CDC_devyansh_sehgal (3).pdf" target="_blank"
+              <a
+                href="./pdf/FInal_resume_CDC_devyansh_sehgal (3).pdf"
+                target="_blank"
                 >Download CV</a
               >
             </button>
@@ -155,12 +157,12 @@
               <div class="timeline_wrapper">
                 <div class="item">
                   <p>2016</p>
-                  <p class="center">The millennium school</p>
+                  <p class="center">The Millennium School</p>
                   <p>Class 10th</p>
                 </div>
                 <div class="item">
                   <p>2018</p>
-                  <p class="center">The millennium school</p>
+                  <p class="center">The Millennium School</p>
                   <p>Class 12th</p>
                 </div>
                 <div class="item">
@@ -198,7 +200,7 @@
             <h1 class="section_heading">Technologies & languages</h1>
             <div class="skills_wrapper">
               <div class="skill-box">
-                <h4>HTML & CSS</h4>
+                <h4>Algorithms</h4>
                 <div class="progress_wrap">
                   <span data-percent="89" class="progress_bar">
                     <span class="tooltip">Expert</span>
@@ -208,7 +210,7 @@
               <div class="skill-box">
                 <h4>React.js</h4>
                 <div class="progress_wrap">
-                  <span data-percent="61" class="progress_bar">
+                  <span data-percent="80" class="progress_bar">
                     <span class="tooltip">Intermediate</span>
                   </span>
                 </div>
@@ -301,7 +303,9 @@
               <div class="slide">
                 <h2>Netflix App</h2>
                 <p>
-                  A full stack Netflixclone with User authentication and stripe payment gateway. Users can select various pricing plans and view movies/trailers 
+                  A full stack Netflixclone with User authentication and stripe
+                  payment gateway. Users can select various pricing plans and
+                  view movies/trailers
                 </p>
                 <h6>Tech stack used : React Redux, Stripe, Firebase</h6>
               </div>
@@ -392,11 +396,13 @@
       <section class="partners">
         <div class="partner_text">Work Experience / Internships</div>
         <div class="brands_wrapper">
-          <img src="./images/images/myera.png" alt="MyEra Tech" />
-          <img src="./images/images/nsf.png" alt="NSF" />
-          <img src="./images/images/yoloud.png" alt="Yoloud" />
-          <img src="./images/images/cb.png" alt="CityBubble Group" />
-          <img src="./images/images/snu.png" alt="Shiv Nadar University" />
+          <a href="https://myera.pro/" target="_blank"><img src="./images/images/myera.png" alt="MyEra Tech" /></a>
+          <a href="https://www.nourishingschools.org/" target="_blank"><img src="./images/images/nsf.png" alt="NSF" /></a>
+
+          <a href="https://yoloud.com/digital-consulting/" target="_blank"><img src="./images/images/yoloud.png" alt="Yoloud" /></a>
+          <a href="https://citybubble.in/" target="_blank"><img src="./images/images/cb.png" alt="CityBubble Group" /></a>
+          <a href="https://snu.edu.in/home" target="_blank"><img src="./images/images/snu.png" alt="Shiv Nadar University"
+          /></a>
         </div>
       </section>
 
