updated pdf resume and bugs fixes for ui on slick slider

--- a/portfolio.html
+++ b/portfolio.html
@@ -260,28 +260,31 @@
 
             <div class="slider">
               <div class="slide">
-                <h2>World Covid Tracker</h2>
+                <h2>AI-based Checkers and tic-tac-toe game</h2>
                 <p>
-                  A realtime covid tracker that displays data related to no of
-                  cured cases, total deaths etc for various countries.
+                  2 Games allowing users to play against the computer(AI) with
+                  varying difficulty levels using the MINIMAX algorithm.
                 </p>
-                <h6>Tech stack used: Data structures in C language</h6>
+                <h6>Tech stack used: HTML, CSS, JS, C++</h6>
               </div>
 
               <div class="slide">
-                <h2>AI Checkers game</h2>
+                <h2>Snu Food Service | Food ordering app |</h2>
                 <p>
-                  An intelligent AI based checkers game with option to play
-                  against the computer with different levels of difficulty
+                  A full-stack food delivery app with an admin dashboard that
+                  lets users order food using a payment gateway and tracks order
+                  status in realtime using socket.io
                 </p>
-                <h6>Tech stack used : HTML, CSS and javascript</h6>
+                <h6>Tech stack used : MERN STACK</h6>
               </div>
 
               <div class="slide">
                 <h2>Sentiment analysis webapp</h2>
                 <p>
-                  A pyhton web app that classifies travel reviews for airline
-                  companies into positive , negative and neutral
+                  A Python web app that can classify data from any dataset
+                  as positive, negative, or neutral, plot results on a
+                  histogram/piechart, and perform a comparative analysis
+                  between entities of the dataset
                 </p>
                 <h6>
                   Tech stack used : python libraries like NLTK, Matplotlib and
@@ -301,11 +304,13 @@
               </div>
 
               <div class="slide">
-                <h2>Netflix App</h2>
+                <h2>SNU-SOCIAL | College Utility App</h2>
                 <p>
-                  A full stack Netflixclone with User authentication and stripe
-                  payment gateway. Users can select various pricing plans and
-                  view movies/trailers
+                  Built a multifunctional react dashboard for college
+                  with various apps like a built-in social media app, realtime code and text editor using web sockets, voting
+                  app, movies app, online podcast app with services like
+                  payment and user authentication, real-time
+                  messaging, SMS support etc
                 </p>
                 <h6>Tech stack used : React Redux, Stripe, Firebase</h6>
               </div>
@@ -396,12 +401,21 @@
       <section class="partners">
         <div class="partner_text">Work Experience / Internships</div>
         <div class="brands_wrapper">
-          <a href="https://myera.pro/" target="_blank"><img src="./images/images/myera.png" alt="MyEra Tech" /></a>
-          <a href="https://www.nourishingschools.org/" target="_blank"><img src="./images/images/nsf.png" alt="NSF" /></a>
+          <a href="https://myera.pro/" target="_blank"
+            ><img src="./images/images/myera.png" alt="MyEra Tech"
+          /></a>
+          <a href="https://www.nourishingschools.org/" target="_blank"
+            ><img src="./images/images/nsf.png" alt="NSF"
+          /></a>
 
-          <a href="https://yoloud.com/digital-consulting/" target="_blank"><img src="./images/images/yoloud.png" alt="Yoloud" /></a>
-          <a href="https://citybubble.in/" target="_blank"><img src="./images/images/cb.png" alt="CityBubble Group" /></a>
-          <a href="https://snu.edu.in/home" target="_blank"><img src="./images/images/snu.png" alt="Shiv Nadar University"
+          <a href="https://yoloud.com/digital-consulting/" target="_blank"
+            ><img src="./images/images/yoloud.png" alt="Yoloud"
+          /></a>
+          <a href="https://citybubble.in/" target="_blank"
+            ><img src="./images/images/cb.png" alt="CityBubble Group"
+          /></a>
+          <a href="https://snu.edu.in/home" target="_blank"
+            ><img src="./images/images/snu.png" alt="Shiv Nadar University"
           /></a>
         </div>
       </section>
