--- a/portfolio.html
+++ b/portfolio.html
@@ -130,8 +130,8 @@
               <span>Economics</span>
             </p>
             <p>
-              <span>Technologies</span>
-              <span>Django,jquery,HTML/CSS,IBM cloud,Python</span>
+              <span>Tech Stack</span>
+              <span>HTML,CSS,JS,Python,R,C/C++,Node.js,React.js </span>
             </p>
             <p>
               <span>Databases known</span>
@@ -139,7 +139,7 @@
             </p>
             <p>
               <span>Tools</span>
-              <span>Eclipse,Git,SVN,Maven</span>
+              <span>Git,Postman,Heroku,Firebase</span>
             </p>
           </div>
         </div>
@@ -197,10 +197,10 @@
             </div>
           </div>
           <div class="right">
-            <h1 class="section_heading">Technologies & languages</h1>
+            <h1 class="section_heading">Skills</h1>
             <div class="skills_wrapper">
               <div class="skill-box">
-                <h4>Algorithms</h4>
+                <h4>C/C++</h4>
                 <div class="progress_wrap">
                   <span data-percent="89" class="progress_bar">
                     <span class="tooltip">Expert</span>
@@ -208,7 +208,7 @@
                 </div>
               </div>
               <div class="skill-box">
-                <h4>React.js</h4>
+                <h4>MERN Stack</h4>
                 <div class="progress_wrap">
                   <span data-percent="80" class="progress_bar">
                     <span class="tooltip">Intermediate</span>
@@ -224,7 +224,7 @@
                 </div>
               </div>
               <div class="skill-box">
-                <h4>C/C++</h4>
+                <h4>Git and Version control</h4>
                 <div class="progress_wrap">
                   <span data-percent="80" class="progress_bar">
                     <span class="tooltip">Advanced</span>
@@ -240,7 +240,7 @@
                 </div>
               </div>
               <div class="skill-box">
-                <h4>Database Administration</h4>
+                <h4>Database Management</h4>
                 <div class="progress_wrap">
                   <span data-percent="75" class="progress_bar">
                     <span class="tooltip">Advanced</span>
@@ -402,20 +402,20 @@
         <div class="partner_text">Work Experience / Internships</div>
         <div class="brands_wrapper">
           <a href="https://myera.pro/" target="_blank"
-            ><img src="./images/images/myera.png" alt="MyEra Tech"
+            ><img style="height: 80px; width:min-content;" src="./images/images/myera.png" alt="MyEra Tech"
           /></a>
           <a href="https://www.nourishingschools.org/" target="_blank"
-            ><img src="./images/images/nsf.png" alt="NSF"
+            ><img style="height: 80px; width:min-content;" src="./images/images/nsf.png" alt="NSF"
           /></a>
 
           <a href="https://yoloud.com/digital-consulting/" target="_blank"
-            ><img src="./images/images/yoloud.png" alt="Yoloud"
+            ><img style="height: 80px; width:min-content;" src="./images/images/yoloud.png" alt="Yoloud"
           /></a>
           <a href="https://citybubble.in/" target="_blank"
-            ><img src="./images/images/cb.png" alt="CityBubble Group"
+            ><img style="height: 80px; width:min-content;" src="./images/images/cb.png" alt="CityBubble Group"
           /></a>
-          <a href="https://snu.edu.in/home" target="_blank"
-            ><img src="./images/images/snu.png" alt="Shiv Nadar University"
+          <a href="https://vgive-ui.herokuapp.com/" target="_blank"
+            ><img style="height: 80px; width:min-content;" src="https://vgive-ui.herokuapp.com/static/media/logo.044e50083886d7831610.png" alt="vGive Technologies"
           /></a>
         </div>
       </section>
