--- a/portfolio.html
+++ b/portfolio.html
@@ -131,7 +131,7 @@
             </p>
             <p>
               <span>Tech Stack</span>
-              <span>HTML,CSS,JS,Python,R,C/C++,Node.js,React.js </span>
+              <span>Python,C++,MERN-STACK</span>
             </p>
             <p>
               <span>Databases known</span>
@@ -139,7 +139,7 @@
             </p>
             <p>
               <span>Tools</span>
-              <span>Git,Postman,Heroku,Firebase</span>
+              <span>Git,Postman,Heroku</span>
             </p>
           </div>
         </div>
