updated about me

--- a/portfolio.html
+++ b/portfolio.html
@@ -93,10 +93,13 @@
           <div class="left">
             <h2>Devyansh Sehgal</h2>
             <p>
-              I'm a web-developer proficient in React.js and I have a good grasp
-              over programming languages like C++ and Python. I have a
-              Professional Certification in Applied Artificial Intelligence from
-              IBM comprising of 6 courses.
+              Hi 👋, I'm Devyansh Sehgal,
+A passionate full-stack developer from India
+I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target="_blank">vGive Inc </a>- A Donor/charity management fundraising platform (Los Altos, California).
+
+👯 I’m looking to collaborate on intersting full stack web dev projects.
+
+💬 Ask me about React, Node, SQL.
             </p>
             <button>
               <a
@@ -312,7 +315,7 @@
                   payment and user authentication, real-time
                   messaging, SMS support etc
                 </p>
-                <h6>Tech stack used : React Redux, Stripe, Firebase</h6>
+                <h6>Tech stack used : MERN STACK, Stripe, socket.io</h6>
               </div>
 
               <div class="slide">
