changes to portfolio for interviews

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,9 +49,9 @@
             <h2>Devyansh Sehgal</h2>
             <p class="cd-headline loading-bar">
               <span class="cd-words-wrapper">
-                <b class="is-visible">Computer Science Undergrad</b>
-                <b>React Developer</b>
-                <b>UI/UX Designer</b>
+                <b class="is-visible">Full Stack Software Developer</b>
+                <b>Final Year Cse Student</b>
+                <b>ML Enthusiast</b>
               </span>
             </p>
           </div>
@@ -184,17 +184,17 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
                 <div class="item">
                   <p>California, Feb-2022</p>
                   <p class="center">vGive Inc.</p>
-                  <p>FullStack Web-Dev Intern</p>
+                  <p>FullStack Software Developer/p>
                 </div>
                 <div class="item">
                   <p>Delhi, Dec-2021</p>
-                  <p class="center">MyEra Technologies</p>
-                  <p>Software Development Intern</p>
+                  <p class="center">Intel Corporation</p>
+                  <p>AI and ML Bootcamp Mentor</p>
                 </div>
                 <div class="item">
                   <p>Delhi, July-2021</p>
-                  <p class="center">Yoloud Pvt Ltd.</p>
-                  <p>FrontEnd Developer</p>
+                  <p class="center">MyEra Group</p>
+                  <p>FrontEnd Developement Intern</p>
                 </div>
               </div>
             </div>
@@ -362,10 +362,10 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
               <div class="item projects">
                 <a
                   class="magnify"
-                  href="./images/images/django certificate-1.png"
+                  href="./images/images/ML_scikit_learn_datacamp_certificate-1.png"
                   title="click to magnify"
                 >
-                  <img src="./images/images/django certificate-1.png" alt="" />
+                  <img src="./images/images/ML_scikit_learn_datacamp_certificate-1.png" alt="" />
                 </a>
               </div>
               <div class="item design">
@@ -404,6 +404,12 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
       <section class="partners">
         <div class="partner_text">Work Experience / Internships</div>
         <div class="brands_wrapper">
+          <a href="https://vgive-ui.herokuapp.com/" target="_blank"
+            ><img style="height: 80px; width:min-content;" src="https://vgive-ui.herokuapp.com/static/media/logo.044e50083886d7831610.png" alt="vGive Technologies"
+          /></a>
+          <a href="https://bootcamp.aiforyouth.org/" target="_blank"
+            ><img style="height: 80px; width:min-content; border-radius: 5px; " src="./images/images/intel_ai.jpg" alt="Intel"
+          /></a>
           <a href="https://myera.pro/" target="_blank"
             ><img style="height: 80px; width:min-content;" src="./images/images/myera.png" alt="MyEra Tech"
           /></a>
@@ -411,15 +417,11 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
             ><img style="height: 80px; width:min-content;" src="./images/images/nsf.png" alt="NSF"
           /></a>
 
-          <a href="https://yoloud.com/digital-consulting/" target="_blank"
-            ><img style="height: 80px; width:min-content;" src="./images/images/yoloud.png" alt="Yoloud"
-          /></a>
+          
           <a href="https://citybubble.in/" target="_blank"
             ><img style="height: 80px; width:min-content;" src="./images/images/cb.png" alt="CityBubble Group"
           /></a>
-          <a href="https://vgive-ui.herokuapp.com/" target="_blank"
-            ><img style="height: 80px; width:min-content;" src="https://vgive-ui.herokuapp.com/static/media/logo.044e50083886d7831610.png" alt="vGive Technologies"
-          /></a>
+          
         </div>
       </section>
 
