spelling check for experiences

--- a/portfolio.html
+++ b/portfolio.html
@@ -184,7 +184,7 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
                 <div class="item">
                   <p>California, Feb-2022</p>
                   <p class="center">vGive Inc.</p>
-                  <p>FullStack Software Developer/p>
+                  <p>FullStack Software Developer</p>
                 </div>
                 <div class="item">
                   <p>Delhi, Dec-2021</p>
