added and updated resume
added and updated resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -93,13 +93,16 @@
           <div class="left">
             <h2>Devyansh Sehgal</h2>
             <p>
-              Hi 👋, I'm Devyansh Sehgal,
-A passionate full-stack developer from India
-I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target="_blank">vGive Inc </a>- A Donor/charity management fundraising platform (Los Altos, California).
-
-👯 I’m looking to collaborate on intersting full stack web dev projects.
-
-💬 Ask me about React, Node, SQL.
+              Hi 👋, I'm Devyansh Sehgal, A passionate full-stack developer from
+              India. Being a computer science engineering student at Shiv Nadar
+              Univerisity, Delhi-NCR, I have hands-on experience with computer
+              programming fundamentals, data analysis and software development.
+              I recently built
+              <a href="https://vgive-ui.herokuapp.com/" target="_blank">vGive</a
+              >- A Donor/charity management fundraising platform (Los Altos,
+              California). 👯 I’m looking to collaborate on intersting full
+              stack web dev projects. 💬 Ask me about React, Node, SQL, AWS,
+              Docker, AI and ML.
             </p>
             <button>
               <a
@@ -189,7 +192,7 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
                 <div class="item">
                   <p>Delhi, Dec-2021</p>
                   <p class="center">Intel Corporation</p>
-                  <p>AI and ML Bootcamp Mentor</p>
+                  <p>Technical Consultant - (AI & ML)</p>
                 </div>
                 <div class="item">
                   <p>Delhi, July-2021</p>
@@ -263,18 +266,21 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
 
             <div class="slider">
               <div class="slide">
-                <h2>AI-based Checkers and tic-tac-toe game</h2>
+                <h2>AADHAAR BOOKING APP | SIH'22 |</h2>
                 <p>
-                  2 Games allowing users to play against the computer(AI) with
-                  varying difficulty levels using the MINIMAX algorithm.
+                  ➔ Developed a web-app for admin to enroll Aadhaar operators
+                  with an analytical dashboard for in depth analysis of Aadhaar
+                  operator’s performance ➔ User-side and operator-side mobile
+                  apps that allow users to book slots in real time for nearest
+                  Aadhaar operator to v
                 </p>
-                <h6>Tech stack used: HTML, CSS, JS, C++</h6>
+                <h6>Tech stack used: FIREBASE, REACT.JS, NODE.JS, FLUTTER</h6>
               </div>
 
               <div class="slide">
                 <h2>Snu Food Service | Food ordering app |</h2>
                 <p>
-                  A full-stack food delivery app with an admin dashboard that
+                  ➔ A full-stack food delivery app with an admin dashboard that
                   lets users order food using a payment gateway and tracks order
                   status in realtime using socket.io
                 </p>
@@ -284,10 +290,10 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
               <div class="slide">
                 <h2>Sentiment analysis webapp</h2>
                 <p>
-                  A Python web app that can classify data from any dataset
-                  as positive, negative, or neutral, plot results on a
-                  histogram/piechart, and perform a comparative analysis
-                  between entities of the dataset
+                  ➔ An NLP model that takes customer product reviews as input, and
+                  classifies reviews into positive/negative/neutral by
+                  performing sentiment analysis using AWS Sagemaker and Amazon
+                  Athena
                 </p>
                 <h6>
                   Tech stack used : python libraries like NLTK, Matplotlib and
@@ -296,32 +302,22 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
               </div>
 
               <div class="slide">
-                <h2>Personal Chatbot</h2>
-                <p>
-                  A personal AI based chatbot ready to be deployed on a website
-                  that can answer a customer's questions
-                </p>
-                <h6>
-                  Tech stack used : python libraries like NLTK and Streamlit
-                </h6>
-              </div>
-
-              <div class="slide">
                 <h2>SNU-SOCIAL | College Utility App</h2>
                 <p>
-                  Built a multifunctional react dashboard for college
-                  with various apps like a built-in social media app, realtime code and text editor using web sockets, voting
-                  app, movies app, online podcast app with services like
-                  payment and user authentication, real-time
-                  messaging, SMS support etc
+                  ➔ Multi utility dashboard with various apps like social media
+                  app, real-time code editor, file transfer app, voting app,
+                  movies app, chatbot support
                 </p>
-                <h6>Tech stack used : MERN STACK, Stripe, socket.io</h6>
+                <h6>
+                  Tech stack used : FIREBASE, REACT.JS, NODE.JS, EXPRESS.JS,
+                  HEROKU
+                </h6>
               </div>
 
               <div class="slide">
                 <h2>Ac'company</h2>
                 <p>
-                  A full stack web app where users can host and register for
+                  ➔ A full stack web app where users can host and register for
                   tech competitons, Hackathons etc. Users can join Teams and
                   search for Live competitons in real-time
                 </p>
@@ -331,7 +327,7 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
               <div class="slide">
                 <h2>Emotion Detector in Python</h2>
                 <p>
-                  Finds out the dominant emotion present in the text paragraph
+                  ➔ Finds out the dominant emotion present in the text paragraph
                   and detects various emotions and plots results graphically.
                 </p>
                 <h6>Tech stack used : NLTK and Matplotlib in Python</h6>
@@ -365,7 +361,10 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
                   href="./images/images/ML_scikit_learn_datacamp_certificate-1.png"
                   title="click to magnify"
                 >
-                  <img src="./images/images/ML_scikit_learn_datacamp_certificate-1.png" alt="" />
+                  <img
+                    src="./images/images/ML_scikit_learn_datacamp_certificate-1.png"
+                    alt=""
+                  />
                 </a>
               </div>
               <div class="item design">
@@ -405,23 +404,36 @@ I’m currently interning with <a href="https://vgive-ui.herokuapp.com/" target=
         <div class="partner_text">Work Experience / Internships</div>
         <div class="brands_wrapper">
           <a href="https://vgive-ui.herokuapp.com/" target="_blank"
-            ><img style="height: 80px; width:min-content;" src="https://vgive-ui.herokuapp.com/static/media/logo.044e50083886d7831610.png" alt="vGive Technologies"
+            ><img
+              style="height: 80px; width: min-content"
+              src="https://media-exp1.licdn.com/dms/image/C560BAQHXqeEcXPVxaA/company-logo_200_200/0/1649145126998?e=1675900800&v=beta&t=gQ1fE0S3GpIppvPReEiyhPVT7uXdkbIYjVc59I2WNUs"
+              alt="vGive Technologies"
           /></a>
           <a href="https://bootcamp.aiforyouth.org/" target="_blank"
-            ><img style="height: 80px; width:min-content; border-radius: 5px; " src="./images/images/intel_ai.jpg" alt="Intel"
+            ><img
+              style="height: 80px; width: min-content; border-radius: 5px"
+              src="./images/images/intel_ai.jpg"
+              alt="Intel"
           /></a>
           <a href="https://myera.pro/" target="_blank"
-            ><img style="height: 80px; width:min-content;" src="./images/images/myera.png" alt="MyEra Tech"
+            ><img
+              style="height: 80px; width: min-content"
+              src="./images/images/myera.png"
+              alt="MyEra Tech"
           /></a>
           <a href="https://www.nourishingschools.org/" target="_blank"
-            ><img style="height: 80px; width:min-content;" src="./images/images/nsf.png" alt="NSF"
+            ><img
+              style="height: 80px; width: min-content"
+              src="./images/images/nsf.png"
+              alt="NSF"
           /></a>
 
-          
           <a href="https://citybubble.in/" target="_blank"
-            ><img style="height: 80px; width:min-content;" src="./images/images/cb.png" alt="CityBubble Group"
+            ><img
+              style="height: 80px; width: min-content"
+              src="./images/images/cb.png"
+              alt="CityBubble Group"
           /></a>
-          
         </div>
       </section>
 
